<resources>
    <string name="app_name">FoodSnap</string>
    <string name="welcome">Welcome!</string>
    <string name="onboarding_copy_text">Start your healthy life\nwith FoodSnap</string>
    <string name="login">Login</string>
    <string name="login_underlined"><u>Login</u></string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_underlined"><u>Sign Up</u></string>

    <string name="or">or</string>
    <string name="name">Name</string>
    <string name="title_home">Home</string>
    <string name="title_camera">Camera</string>
    <string name="title_account">Account</string>
    <string name="carbs">Carbs</string>
    <string name="proteins">Proteins</string>
    <string name="fats">Fats</string>

    <string name="today_s_meals">Today\'s Meals</string>
    <string name="history">History</string>
    <string name="history_underlined"><u>History</u></string>
    <string name="calories">Calories</string>
    <string name="there_are_no_items">Food not found!</string>
    <string name="profile">Profile</string>
    <string name="support">Support</string>
    <string name="log_out">Log Out</string>
    <string name="save">Save</string>

    <string name="error_required">This field can\'t be empty</string>
    <string name="error_password">Password must be 8 characters or more</string>
    <string name="error_email">Please fill a valid email</string>
    <string name="error_confirmation">Password confirmation must matches the password</string>
    <string name="error_name">Name can\'t be empty</string>
    <string name="error_age">Age can\'t be empty</string>
    <string name="error_height">Height can\'t be empty</string>
    <string name="error_weight">Weight can\'t be empty</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="nutritional_information">Nutritional Information</string>
    <string name="track">Track</string>
    <string name="faq">FAQ</string>
    <string name="call_center">Call Center</string>
    <string name="premium">Premium</string>
    <string name="privacy">Privacy</string>
    <string name="change_password">Change Password</string>
    <string name="age">Age</string>
    <string name="height">Height(cm)</string>
    <string name="weight">Weight(kg)</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New password</string>
    <string name="fill_profile">Let\'s fill your profile first</string>
    <string name="empty_home">Looks like you haven\'t tracked any meals today.</string>
    <string name="button_camera_shutter">Button Camera Shutter</string>
    <string name="button_check">Button Check</string>
    <string name="button_close">Button Close</string>
    <string name="button_camera_switch">Button Camera Switch</string>

    <string name="bmi_info">BMI: %1$s (%2$s)</string>
    <string name="grams_info">%1$sg</string>

    <string name="img_empty_list">Image Empty List</string>
    <string name="img_food">Image Food</string>
    <string name="img_logo">Image Logo</string>
    <string name="img_fill_profile">Image Fill Profile</string>
</resources>