<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.main.fragment.account.AccountFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:paddingTop="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="2dp"
                app:cardCornerRadius="100dp">

                <ImageView
                    android:id="@+id/iv_avatar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_nutrition" />


            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_semibold"
                    android:textColor="@color/secondaryGreen"
                    android:textSize="26sp"
                    tools:text="Theo James" />

                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter"
                    android:textColor="@color/secondaryGreen"
                    tools:text="theojames@gmail.com" />


                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_cal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:cardCornerRadius="8dp">

                    <TextView
                        android:id="@+id/tv_cal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_semibold"
                        android:paddingHorizontal="12dp"
                        android:paddingVertical="4dp"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        tools:text="BMI: 20 (Normal)" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginVertical="18dp"
            android:background="#80023020" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/profile"
            android:textColor="@color/secondaryGreen"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_edit_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:background="?android:attr/selectableItemBackground"
            android:drawableStart="@drawable/ic_acc_fill"
            android:drawableEnd="@drawable/ic_next"
            android:drawablePadding="16dp"
            android:drawableTint="@color/secondaryGreen"
            android:fontFamily="@font/inter"
            android:text="@string/edit_profile"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/secondaryGreen" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_change_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:drawableStart="@drawable/ic_lock"
            android:drawableEnd="@drawable/ic_next"
            android:drawablePadding="16dp"
            android:drawableTint="@color/secondaryGreen"
            android:fontFamily="@font/inter"
            android:text="@string/change_password"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/secondaryGreen" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_privacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:drawableStart="@drawable/ic_privacy"
            android:drawableEnd="@drawable/ic_next"
            android:drawablePadding="16dp"
            android:drawableTint="@color/secondaryGreen"
            android:fontFamily="@font/inter"
            android:text="@string/privacy"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/secondaryGreen" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_premium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:drawableStart="@drawable/ic_premium"
            android:drawableEnd="@drawable/ic_next"
            android:drawablePadding="16dp"
            android:drawableTint="@color/secondaryGreen"
            android:fontFamily="@font/inter"
            android:text="@string/premium"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/secondaryGreen" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/support"
            android:textColor="@color/secondaryGreen"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_call_center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="?android:attr/selectableItemBackground"
            android:drawableStart="@drawable/ic_phone"
            android:drawableEnd="@drawable/ic_next"
            android:drawablePadding="16dp"
            android:drawableTint="@color/secondaryGreen"
            android:fontFamily="@font/inter"
            android:text="@string/call_center"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/secondaryGreen" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_faq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:drawableStart="@drawable/ic_faq"
            android:drawableEnd="@drawable/ic_next"
            android:drawablePadding="16dp"
            android:drawableTint="@color/secondaryGreen"
            android:fontFamily="@font/inter"
            android:text="@string/faq"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/secondaryGreen" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/log_out"
            android:textColor="@color/secondaryGreen"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_log_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="?android:attr/selectableItemBackground"
            android:drawableStart="@drawable/ic_logout"
            android:drawableEnd="@drawable/ic_next"
            android:drawablePadding="16dp"
            android:drawableTint="@color/secondaryGreen"
            android:fontFamily="@font/inter"
            android:text="@string/log_out"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/secondaryGreen" />


    </LinearLayout>
</ScrollView>