<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.settings.changepassword.ChangePasswordActivity">

    <FrameLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_bottom_rounded"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        android:paddingBottom="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="center|start"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/change_password"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintTop_toTopOf="parent" />

    </FrameLayout>

    <com.foodsnap.app.ui.customview.CustomTextInputLayout
        android:id="@+id/til_old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/old_password"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.foodsnap.app.ui.customview.CustomTextInputLayout>

    <com.foodsnap.app.ui.customview.CustomTextInputLayout
        android:id="@+id/til_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:hint="@string/new_password"
        app:layout_constraintTop_toBottomOf="@id/til_old_password"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.foodsnap.app.ui.customview.CustomTextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password_confirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:hint="@string/password_confirmation"
        app:layout_constraintTop_toBottomOf="@id/til_new_password"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_password_confirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/primaryGreen"
        android:text="@string/change_password"
        app:cornerRadius="18dp"
        app:layout_constraintTop_toBottomOf="@id/til_password_confirmation" />

    <FrameLayout
        android:id="@+id/progressOverlay"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#4D000000">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"/>

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>